--- a/20230228/package.json
+++ b/20230228/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "axios": "^1.3.4",
     "babel-loader": "^9.1.2",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.0",
