--- a/20230227/Webpack/StepFinal/package.json
+++ b/20230227/Webpack/StepFinal/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack",
+  "name": "stepfinal",
   "version": "1.0.0",
-  "description": "1) Babel just transpiler only code. Also, babel doens't transpile is multiple files. ex- require 2) WebPack is bundler module.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.76.1",
     "webpack-cli": "^5.0.1"
   }
